--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,15 @@ backcall==0.2.0
 bleach==3.3.0
 blinker==1.4
 Boruta==0.3
+Brlapi==0.7.0
 Brotli==1.0.9
 certifi==2020.4.5.1
 cffi==1.14.5
 chardet==3.0.4
+chrome-gnome-shell==0.0.0
 click==7.1.2
 colorama==0.4.3
+command-not-found==0.3
 cryptography==3.0
 cupshelpers==1.0
 cycler==0.10.0
